:rocket: Options Page and Web Request Redirects

--- a/stealthify/chrome/options.html
+++ b/stealthify/chrome/options.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Stealthify - Options</title>
+		<title>Stealthify - Settings</title>
 		<style>
 
 			@import url("../design/common/index.css");
@@ -10,11 +10,11 @@
 			@import url("../design/common/elements.css");
 			@import url("../design/common/layout.css");
 
-			@import url("../design/card/Options.css");
+			@import url("../design/card/Settings.css");
 
 
 
-			body > stealthify-card-options {
+			body > stealthify-card-settings {
 				margin: 64px auto 0px auto;
 			}
 
@@ -22,17 +22,13 @@
 				margin-bottom: 64px;
 			}
 
+			body > article code {
+				display: inline-block;
+			}
+
 		</style>
 	</head>
 	<body data-page="options">
-		<article>
-			<h3>Stealthify Options</h3>
-			<p>
-				Here you can configure all Stealthify Settings that are stored
-				in the local storage. It is recommended to use a Stealth Service
-				running at <code>localhost</code> for maximum Privacy and Security.
-			</p>
-		</article>
 		<script type="module" src="options.mjs"></script>
 	</body>
 </html>
